fix copying to clipboard on ios

--- a/src/index.css
+++ b/src/index.css
@@ -169,7 +169,7 @@ h1.title {
   color: #fff;
   font-weight: bold;
 }
-.share input {
+.share-input {
   margin: 0 1em;
   max-width: 400px;
 }
